--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,58 +1,26 @@
 * {
     box-sizing: border-box;
     text-align: left;
-    font-size: 24px;
+    font-size: 12px;
     color: #777777;
     font-family: "Arial", "Helvetica Neue", "Helvetica", sans-serif;
     margin: 0;
     padding: 0;
-
   }
+
   a{
       text-decoration: none;
+      font-size: 12px;
+      padding: 10px;
   }
 
-  .name{
-      background: #4aaaa5;
-      float: left;
-      height: 75px;
-      margin-left: 10%;
-      color: white;
-      font-family: "Georgia", "Times", "Times New Roman", serif;
-      padding: 20px;
-  }
-
-  .bio{
-      padding: 20px;
-  }
-  h1{
-      color:#4aaaa5;
-      text-align: left;
-      padding: 20px;
-  }
-
-  .tabs{
-      background: white;
-      float: right;
-      margin-left: 2px;
-      margin-right: 15px;
-      margin-top: 30px;
-  }
-
-  body{
+  body {
     background-image: url("../images/full-bloom.png");
+    height: 100%;
+    margin: 0;
   }
 
-  .bioimage{
-      float: left;
-      margin: 20px;
-      width: 5px;
-      height: 5px;
-
-  }
-  
-
-.nav-bar{
+  .nav-bar{
     width: 100%;
     height: 75px;
     margin: 0 auto;
@@ -61,25 +29,133 @@
     clear: both;
 }
 
+  .name{
+      background: #4aaaa5;
+      float: left;
+      height: 75px;
+      margin-left: 10%;
+      color: white;
+      font-family: "Georgia";
+      padding: 20px;
+  }
+
+  h1{
+      color:#4aaaa5;
+      text-align: left;
+      padding-right: 20px;
+      padding-bottom: 20px;
+      font-family: "Georgia";
+      font-size: 24px;
+  }
+
+  .tabs{
+      background: white;
+      float: right;
+      margin-right: 10%;
+      margin-top: 25px;
+  }
+  .bio{
+    padding-top: 20px;
+    font-size: 12px;
+    line-height: 2;
+}
+
+  .bioimage{
+      float: left;
+      margin-top: 20px;
+      margin-right: 20px;
+  }
+
+  .bio{
+    padding-top: 20px;
+    font-size: 12px;
+}
+
 .main-content{
     background: #ffffff;
     border-color: #dddddd;
-    width: 80%;
+    width: auto;
     margin-top: 40px;
     margin-left: 10%;
     margin-right: 10%;
-    padding: 60px;
+    padding: 20px;
+    overflow: auto;
+    clear: both;
 }
 
+.form{
+    font-size: 12px;
+    padding-top: 20px;
+}
+
+.contact-input{
+    padding-bottom: 15px;
+}
+
+input, textarea{
+    width: 100%;
+}
+
+input{
+    height: 30px;
+}
+
+#Hangman, #RPG-Game, #Trivia-Game, #Rutgers, #RPS {
+    float: left;
+    margin: 20px;
+}
+
+.project-title{
+    background-color:#4aaaa5;
+    color: #ffffff;
+    width: 200px;
+    height: 45px;
+    padding-top: 14px;
+    text-align: center;
+    position: relative;
+    top: -86px;
+    font-size: 12px;
+     
+}
+textarea{
+    height: 130px;
+}
+.submit{
+    background-color: #4aaaa5;
+    color: white;
+    text-align: center;
+    font-size: 12px;
+    width: 85px;
+    padding: 7px;
+    position: relative;
+    top: 6px; 
+}
 
 
 footer{
     background: #666666;
     width: 100%;
-    height: 40px;
+    height: 50px;
     margin-bottom: 0%;
     border-top: 10px solid #4aaaa5;
     position: fixed;
     left: 0;
     bottom: 0;
+    font-size: 10px;
+    color: #dddddd;
+    text-align: center;
+    padding-top: 25px;
+}
+
+span{
+    color:#fff;
+}
+
+.wrapper{
+    min-height: 100%;
+    margin-bottom: -50px;
+}
+
+.footer,.push{
+    height: 50px;
 }
